SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

#1438 (in bugs): Row numbers can be shown in text layout
  To switch on row numbers in text layout see menu File --> New Session Properties --> tab General --> checkbox at the bottom of panel

SQL Scripts Plugin: Improved names and tool tips of the scripting functions of Object tree's right mouse menu.

Command line interface (CLI):
  The command line interface (CLI) allows to create formatted files according to the settings in SQuirreL's 'Store result of SQL to file' dialog.
  CLI help commands will inform about details.
  For information on the command line interface see Readme.txt in subdirectory squirrelcli of your SQuirreL installation.


Brushed up the Data Look and feel Plugin;
  - Updated JGoodies Looks to version 2.5.3
  - Made JGoodies Windows look and feel available (Windows only)
  - Fixed several bugs which makes more Look and feels available
  NOTE: Some Look and Feels may cause performance or even functional problems.
        If you think you are seeing such problems switch to a Metal Look and Feel.


Bug fixes:

Change tracking: Improved right gutter to vertical scrollbar synchronization.

#1441 Look and Feel (L&F) Plugin: Extra LaFs not shown
  For information on how to add external Look and Feels consult the Look and Feel Plugin's section in SQuirreL's help.
  Thanks to Stanimir Stamenkov for the fix.

#589 CLI (command line): Increase string display limit
  The column width of CLI output as well as of text outputs was limited to 100 characters.
  The limit is now 1000000 characters.

Internationalization Plugin: On Java version later than 1.8.x the "Load bundles" function raised a ClassCastException.
  See menu File --> Global Preferences -> Tab "i18n administration".