@@ -17,8 +17,6 @@ SessionSQLPropertiesPanel.solcomment=Start of Line Comment
 SessionSQLPropertiesPanel.stmtsep=Statement Separator:
 SessionSQLPropertiesPanel.limitsqlresulttabs=Maximum limit of SQL Result Tabs
 SessionSQLPropertiesPanel.tabs=tabs
-SessionSQLPropertiesPanel.loadColumsInBackground=Load columns in background
-SessionSQLPropertiesPanel.loadColsInBackgroundDescription=Loading columns in background might help users with databases that contain a lot of objects and/or users that work with low data transfer rates. Syntax highlightning and code completion may work less exact if this option is checked. It is recommended to use this option only if you feel that the SQL editor hangs.
 SessionObjectTreePropertiesPanel.filterNote=Object tree display filters for Catalogs, Schemas, and other DB-Objects (Tables, Views, ...) may be configured here. Filters are given as comma separated lists and may use the follwing placeholders:\n% means zero or many characters\n_ means one single character\nNote:\nThese filters only influence displays in the Object tree nonetheless objects are still loaded. To influence Object loading use Alias Schema properties.
 
 SessionObjectTreePropertiesPanel.catalogInclude=Catalog include
@@ -103,7 +101,21 @@ SessionSQLPropertiesPanel.tokenizerNotEditableMsg=One or more of the following p
 generalSessionPropertiesPanel.chkKeepTableLayoutOnRerun=Keep SQL result table layout on rerun SQL
 generalSessionPropertiesPanel.chkShowRowNumberInTextLayout=Show row numbers in text layout
 
+SessionSQLPropertiesPanel.metaDataHandling=Meta data handling
+
 SessionSQLPropertiesPanel.columnLoading=Column loading
+SessionSQLPropertiesPanel.loadColsInBackgroundDescription=Loading columns in background might help users with databases that contain a \
+  lot of objects and/or users that work with low data transfer rates. Syntax highlightning and code completion may work less \
+  exact if this option is checked. It is recommended to use this option only if you feel that the SQL editor hangs.
+
+SessionSQLPropertiesPanel.loadColumsInBackground=Load columns in background
+
+
+SessionSQLPropertiesPanel.metaDataLoading=Meta data loading
+SessionSQLPropertiesPanel.metaDataTimeOutDescription=In an open Session SQuirreL at several occasions reads database meta data, e.g. when loading columns, creating table charts, generating joins. \
+  In case your database driver/connection sometimes delays or hangs you may set this timeout to keep SQuirreL from delaying or hanging. When a time out occurs an error is written to SQuirreL's logs.
+
+SessionSQLPropertiesPanel.metaDataTimeOutMillis=Timeout millis (0 means no timeout)
 
 SessionSQLPropertiesPanel.showSQLErrorsInTab=Show SQL execution errors in result tab
 
