@@ -50,6 +50,7 @@ import net.sourceforge.squirrel_sql.fw.dialects.DialectFactory;
 import net.sourceforge.squirrel_sql.fw.dialects.HibernateDialect;
 import net.sourceforge.squirrel_sql.fw.dialects.UserCancelledOperationException;
 import net.sourceforge.squirrel_sql.fw.sql.*;
+import net.sourceforge.squirrel_sql.fw.timeoutproxy.MetaDataTimeOutProxyFactory;
 import net.sourceforge.squirrel_sql.fw.util.StringManager;
 import net.sourceforge.squirrel_sql.fw.util.StringManagerFactory;
 import net.sourceforge.squirrel_sql.fw.util.StringUtilities;
@@ -136,7 +137,7 @@ public class DBUtil extends I18NBaseObject
 	private static List<String> getPKColumnList(ISQLConnection sourceConn, ITableInfo ti) throws SQLException
 	{
 		ArrayList<String> pkColumns = new ArrayList<String>();
-		DatabaseMetaData md = sourceConn.getConnection().getMetaData();
+		DatabaseMetaData md = MetaDataTimeOutProxyFactory.wrap(sourceConn.getConnection().getMetaData());
 		ResultSet rs = null;
 		if (md.supportsCatalogsInTableDefinitions())
 		{
@@ -1313,7 +1314,7 @@ public class DBUtil extends I18NBaseObject
 		ResultSet rs = null;
 		try
 		{
-			DatabaseMetaData md = con.getConnection().getMetaData();
+			DatabaseMetaData md = MetaDataTimeOutProxyFactory.wrap(con.getConnection().getMetaData());
 			String cat = ti.getCatalogName();
 			String schema = ti.getSchemaName();
 			String tableName = ti.getSimpleName();
@@ -1821,7 +1822,7 @@ public class DBUtil extends I18NBaseObject
 		}
 		try
 		{
-			DatabaseMetaData md = session.getSQLConnection().getConnection().getMetaData();
+			DatabaseMetaData md = MetaDataTimeOutProxyFactory.wrap(session.getSQLConnection().getConnection().getMetaData());
 
 			// Don't change the case of the identifier if database allows mixed
 			// case.
